--- a/src/app/white-paper/white-paper.component.html
+++ b/src/app/white-paper/white-paper.component.html
@@ -4,7 +4,7 @@
       <mat-card class="paper p-0 bg-white">
         <mat-card-content id="cropperId">
 
-          <app-image-dropper src="{{img}}"></app-image-dropper>
+          <app-image-dropper src="{{output}}"></app-image-dropper>
 
 
         </mat-card-content>
